--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-* {
+html {
+  color: #222222;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -10,7 +11,13 @@ header {
 }
 
 h1 {
-  margin: 0 0 48px;
+  margin: 0 0 8px;
+  font-size: 48px;
+  text-align: center;
+}
+
+h1 + p {
+  margin: 0 0 88px;
   text-align: center;
 }
 
@@ -22,6 +29,11 @@ h2 {
 
 h3 {
   margin: 24px 0 16px 32px;
+  font-size: 16px;
+}
+
+h4 {
+  margin: 24px 0 16px 50px;
   font-size: 16px;
 }
 
@@ -56,4 +68,29 @@ li:before {
   width: 4px;
   height: 4px;
   background-color: #1034a6; /* Egyptian */
+}
+
+li p {
+  margin-left: 0;
+}
+
+blockquote {
+  margin: 24px 0;
+  border-left: 4px solid #999;
+  padding-left: 24px;
+}
+
+blockquote > p:first-child {
+  margin-top: -4px;;
+}
+blockquote > p:last-child {
+  margin-bottom: -4px;
+}
+
+p cite:only-child:before {
+  content: '— '
+}
+p cite:only-child {
+  display: block;
+  text-align: right;
 }
