--- a/main.css
+++ b/main.css
@@ -103,8 +103,11 @@ p cite:only-child {
 
 footer {
   margin: 64px auto 0;
+  border: 1px solid #e9e9e9;
   border-radius: 4px 4px 0 0;
   max-width: 960px;
   padding: 6px 10px;
-  background: #eee;
+  font-size: 12px;
+  color: #666;
+  background: #f8f8f8;
 }
